# production-stack

./: .codespell-ignore  .gitignore  .markdownlint.yaml  .pre-commit-config.yaml  CODE_OF_CONDUCT.md  CONTRIBUTING.md  README.md  pyproject.toml  requirements-test.txt  setup.py
.github/: PULL_REQUEST_TEMPLATE.md  curl-01-minimal-example.sh  curl-02-two-pods.sh  curl-04-multiple-models.sh  curl-05-secure-vllm.sh  deployment-router.yaml  multiple-models.yaml  port-forward.sh  values-01-2pods-minimal-example.yaml  values-01-minimal-example.yaml  values-04-multiple-models.yaml  values-06-session-routing.yaml  wait-for-pods.sh
community/: Production_stack_community_meeting.ics  community-event.md  community_meeting_4pm.ics  community_meeting_8am.ics  prod_stack_community_meeting.ics
docker/: Dockerfile  Dockerfile.kvaware
docs/: README.md  requirements-docs.txt
examples/: batch.jsonl  batch.py  openai_api_client_batch.py
helm/: .helmignore  Chart.yaml  README.md  TODO  test.sh  values-example.yaml  values.schema.json  values.yaml
observability/: README.md  install.sh  kube-prom-stack.yaml  uninstall.sh  upgrade.sh  values.yaml  vllm-dashboard.json
operator/: Makefile  PROJECT  go.mod
proposals/: TEMPLATE.md  lora-k8s-support.md
router/: Dockerfile  README.md  build-docker.sh  engine_stats.py  log.py  logic.py  perf-test.sh  protocols.py  request_stats.py  requirements.txt  router.py  routing_logic.py  run-router.sh  service_discovery.py  utils.py
scripts/: setup_vllm_templates.sh
testutils/: README.md  chat-template.json  fake-openai-server.py  run-vllm-server.sh
tutorials/: 00-a-install-multinode-kubernetes-env.md  00-b-install-kuberay-operator.md  14-vllm-v1.md  (+22 more)
(+379 files in other folders)
