[project]
name = "vllm-router"
dynamic = ["version"]
description = "The router for vLLM"
readme = "README.md"
requires-python = ">=3.12"
license = {text = "Apache-2.0"}
classifiers = [
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: Apache Software License",
]
# Should be the same as src/vllm_router/requirements.txt
dependencies = [
    "aiofiles==24.1.0",
    "fastapi==0.115.8",
    "httpx==0.28.1",
    "kubernetes==32.0.0",
    "numpy==1.26.4",
    "prometheus-client==0.21.1",
    "python-multipart==0.0.20",
    "sentry-sdk[fastapi,httpx]==2.27.0",
    "uhashring==2.3",
    "uvicorn==0.34.0",
    "xxhash==3.5.0",
]

[project.scripts]
vllm-router = "vllm_router.app:main"

[project.urls]
Repository = "https://github.com/vllm-project/production-stack"

[project.optional-dependencies]
default = []  # leave this empty because pip requires at least one specifier
semantic_cache = [
    "sentence-transformers==2.2.2",
    "faiss-cpu==1.10.0",
    "huggingface-hub==0.25.2",  # downgrade to 0.25.2 to avoid breaking changes
]
lmcache = [
    "lmcache==0.2.1",
]

[tool.pytest.ini_options]
addopts = "--cov . --cov-report term --cov-report html"
filterwarnings = "ignore"
junit_family = "xunit2"

[build-system]
requires = ["setuptools>=68", "setuptools_scm[toml]>=8.0"]

[tool.setuptools_scm]
write_to = "src/vllm_router/_version.py"

[tool.isort]
profile = "black"

[dependency-groups]
dev = [
    "pytest-cov>=6.1.1",
]
lint = [
    "pre-commit>=4.1.0",
]
test = [
    "pytest>=8.3.4",
    "pytest-asyncio>=0.25.3"
]
